--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+	<!-- Header -->
 	<header>
 		<img src="new images/digy_savvys_logo_168x57.png" alt="Digy Savvys logo" class="logo">
 		<nav>
@@ -24,7 +25,9 @@
 			</ul>
 		</nav>
 	</header>
+	<!-- End Header -->
 
+	<!-- Home Hero -->
 	<section class="home-hero parallax--bg">
 		<div class="container">
 			<h1 class="title">All Things Digital
@@ -33,7 +36,9 @@
 			<a href="#portfolio" class="button button-accent">See Our Work</a>
 		</div>
 	</section>
+	<!-- End Home Hero -->
 
+	<!-- About -->
     <div class="container">	
 		<section class="home-about"><a name="about"></a> 
 			<div class="home-about-textbox parallax--box">
@@ -43,7 +48,9 @@
 			</div>
 		</section>
 	</div>
+	<!-- End About -->
 
+		<!-- Our Services -->
 		<div class="container">
 			<section class="services"><a name="services"></a> 
 					<h1>Our Services</h1>
@@ -67,7 +74,9 @@
 				</div>
 			</section>
 		</div>
+		<!-- End Our Services -->
 
+	<!-- Gallery/Portfolio -->
 	<section class="portfolio"><a name="portfolio"></a> 
 		<h1>Some of our work</h1>
 
@@ -125,7 +134,9 @@
 			</figcaption>
 		</figure>
 	</section>
+	<!-- End Gallery/Portfolio -->
 
+	<!-- Contact -->
 	<section class="cta"><a name="contact"></a> 
 		<div class="container">
 			<h1 class="title title-cta">Like what you see?
@@ -144,8 +155,10 @@
 			<a href="" class="button button-dark">Send Message!</a> <strong>or</strong>
 			<a href="" class="button button-dark">Call Us Now!</a>
 		</div>
-	</section>	
+	</section>
+	<!-- End Contact -->
 
+	<!-- Footer -->
 	<footer>
 		<div class="container">
 			<div class="col-3">
@@ -170,18 +183,9 @@
 					<li>Contact</li>
 				</ul>
 			</div>
-
-			<!-- <div class="col-1">
-				<ul class="unstyled-list">
-					<li><strong>Lorem Ipsum</strong></li>
-					<li>Lorem Ipsum</li>
-					<li>Lorem Ipsum</li>
-					<li>Lorem Ipsum</li>
-					<li>Lorem Ipsum</li>
-				</ul>
-			</div> -->
 		</div>
 	</footer>
+	<!-- Endd Footer -->
 
 	<script
 	  src="https://code.jquery.com/jquery-2.2.4.min.js"
