--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<!-- Header -->
 	<header>
-		<img src="new images/digy_savvys_logo_168x57.png" alt="Digy Savvys logo" class="logo">
+		<img src="new_images/digy_savvys_logo_168x57.png" alt="Digy Savvys logo" class="logo">
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
@@ -40,9 +40,9 @@
 
 	<!-- About -->
     <div class="container">	
-		<section class="home-about"><a name="about"></a> 
+		<section class="home-about">
 			<div class="home-about-textbox parallax--box">
-				<h1>Who we are</h1>
+				<h1 id="about">Who we are</h1>
 				<p>The Digy Savvys are completing 5 years now on the market and there is plenty we are very proud of. We not only make our customers look amazing, but also help them assure their sweet spot on the web. As we all know, a great cover certainly helps selling the book, but content, yes, content is still king.</p>
 				<p>So why don't you have a look at some of our work and contact us so we can also make you stand out from the crowd? But beware, if you don't like to be the center of attention, we are not the ones for you ;)</p>
 			</div>
@@ -52,8 +52,8 @@
 
 		<!-- Our Services -->
 		<div class="container">
-			<section class="services"><a name="services"></a> 
-					<h1>Our Services</h1>
+			<section class="services">
+				<h1 id="services">Our Services</h1>
 
 				<div class="col-services">
 					<h2>Web Development</h2>
@@ -77,8 +77,8 @@
 		<!-- End Our Services -->
 
 	<!-- Gallery/Portfolio -->
-	<section class="portfolio"><a name="portfolio"></a> 
-		<h1>Some of our work</h1>
+	<section class="portfolio"> 
+		<h1 id="portfolio">Some of our work</h1>
 
 		<!-- portfolio item 01 -->
 		<figure class="port-item">
@@ -137,20 +137,16 @@
 	<!-- End Gallery/Portfolio -->
 
 	<!-- Contact -->
-	<section class="cta"><a name="contact"></a> 
+	<section class="cta">
 		<div class="container">
-			<h1 class="title title-cta">Like what you see?
+			<h1 class="title title-cta" id="contact">Like what you see?
 				<span>Then what are you waiting for?</span>
 			</h1>
-				<form action="">
-					<label for="name"></label>
-					<input type="text" placeholder="Your name"><br>
-					<label for="email"></label>
-					<input type="text" placeholder="Your email"><br>
-					<label for="phone"></label>
-					<input type="text" placeholder="Your phone"><br>
-					<label for="message"></label><br>
-					<textarea name="" id="" cols="30" rows="10" placeholder="Your message"></textarea>
+				<form action="#">					
+					<input type="text" placeholder="Your name"><br>					
+					<input type="text" placeholder="Your email"><br>					
+					<input type="text" placeholder="Your phone"><br>					
+					<textarea name="#" id="#" cols="30" rows="10" placeholder="Your message"></textarea>
 				</form>
 			<a href="" class="button button-dark">Send Message!</a> <strong>or</strong>
 			<a href="" class="button button-dark">Call Us Now!</a>
@@ -162,7 +158,7 @@
 	<footer>
 		<div class="container">
 			<div class="col-3">
-				<img src="new images/digy_savvys_logo_168x57.png" alt="Digy Savvys logo" class="logo">
+				<img src="new_images/digy_savvys_logo_168x57.png" alt="Digy Savvys logo" class="logo">
 			</div>
 
 			<div class="col-1">
